Insert banner image into html filr

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
   <script src="script.js"></script>
+
+  <header>
+    <img src="Banner logo.png" alt="Banner" width="100%"
+  </header>
+
+  
+
 </body>
 </html>
