Importing recipe images

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Healthier Option</title>
     <link rel="stylesheet" href="name.scss">
 </head>
 <body>
@@ -14,7 +14,69 @@
     <img src="Banner logo.png" alt="Banner" width="100%"
   </header>
 
-  
+  <section>
+    <div class="progress">
+        <div class="progress-done"></div>
+    </div>
+
+    <div class="inputContainer">
+    </div>
+    <h3>Value</h3>
+    <input class="input" type="number" />
+    </div>
+
+    <div>
+        <h3> Max Value</h3>
+        <input class="maxInput" type="number" />
+    </div>
+</div>
+
+  </section>
+
+  <section>
+    <h3>Track your Healthy Eating</h3>
+  </section>
+
+  <section>
+   <h1>Recommended Recipes </h1>
+  </section>
+
+  <section>
+    <h3>Want to Avoid</h3>
+  </section>
+
+  <div>
+    <img src="Banana Oat Pancakes.png" alt="Banana Oat Pancakes" width="50%" 
+
+  </div>
+
+    <img src="Chia Pudding.png" alt="Chia Pudding" width="50%"
+
+    <div>
+    <img src="Leak & Potato Soup.png" alt="Leak & Potato Soup" width="50%"
+    </div>
+
+    <div>
+        <img src="Roasted Squash & Couscous Salad.png" alt="Roasted Squash & Couscous Salad" width="50%"
+        </div>
+
+        <div>
+            <img src="Lemon Pesto Gnocchi.png" alt="Lemon Pesto Pasta" width="50%"
+            </div>
+
+            <div>
+                <img src="Salmon Tacos.png" alt="Salmon Tacos" width="50%"
+                </div>
+
+                <div>
+                    <img src="Raspberry Slice.png" alt="Raspberry Slice" width="50%"
+                    </div>
+            
+                    <div>
+                        <img src="Carrot Cake Bliss Balls.png" alt="Carrot Cake Bliss Balls" width="50%"
+                        </div>
+
+ 
 
 </body>
 </html>
