Adding dietary requirement logos

--- a/public/index.html
+++ b/public/index.html
@@ -15,21 +15,50 @@
   </header>
 
   <section>
-    <div class="progress">
-        <div class="progress-done"></div>
+    <div class="progress-bar">
+        <div class="progress"></div>
     </div>
 
-    <div class="inputContainer">
-    </div>
-    <h3>Value</h3>
-    <input class="input" type="number" />
+    <div class="calendar"
+    <div class="row">
+        <div class="day">Day 1</div>
+        <div class="meal-log" onclick="addMeal(this)"></div>
     </div>
 
-    <div>
-        <h3> Max Value</h3>
-        <input class="maxInput" type="number" />
+    <div class="row">
+        <div class="day">Day 2</div>
+        <div class="meal-log" onclick="addMeal(this)"></div>
     </div>
+
+    <div class="row">
+        <div class="day">Day 3</div>
+        <div class="meal-log" onclick="addMeal(this)"></div>
+    </div>
+
+    <div class="row">
+        <div class="day">Day 4</div>
+        <div class="meal-log" onclick="addMeal(this)"></div>
+    </div>
+
+    <div class="row">
+        <div class="day">Day 5</div>
+        <div class="meal-log" onclick="addMeal(this)"></div>
+    </div>
+
+    <div class="row">
+        <div class="day">Day 6</div>
+        <div class="meal-log" onclick="addMeal(this)"></div>
+    </div>
+
+    <div class="row">
+        <div class="day">Day 7</div>
+        <div class="meal-log" onclick="addMeal(this)"></div>
+    </div>
+
+
 </div>
+
+    </section>
 
   </section>
 
@@ -44,6 +73,27 @@
   <section>
     <h3>Want to Avoid</h3>
   </section>
+
+  <div class="Glutenicon">
+    <img src="Gluten.png" alt="Remove Gluten">
+    <h4>Gluten</h4>
+  </div>
+
+
+  <div class="Dairyicon">
+    <img src="Dairy.png" alt="Remove Dairy"
+    <h4>Dairy</h4>
+  </div>
+
+
+  <div class="Nutsicon"> 
+    <img src="Nuts.png" alt="Remove Nuts"
+    <h4>Nuts</h4>
+  </div>
+
+  <div class="AddDietary"> 
+    <img src="Add Dietary.png" alt="Add Dietary Requirements icon"
+  </div>
 
   <div>
     <img src="Banana Oat Pancakes.png" alt="Banana Oat Pancakes" width="50%" 
