Displaying pop up notifications and receiving user input

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <section>
-    <div class="progress-bar">
+    <!-- <div class="progress-bar">
         <div class="progress"></div>
     </div>
 
@@ -56,14 +56,25 @@
     </div>
 
 
-</div>
+</div> -->
 
-    </section>
+
+
 
   </section>
 
   <section>
     <h3>Track your Healthy Eating</h3>
+
+    <div class="calendar">
+    <div id="one" style="width: 14%; height:100px; background-color: #C1E1C1;"></div>
+    <div id="two" style="width: 14%; height:100px; background-color: #C1E1C1;"></div>
+    <div id="three" style="width: 14%; height:100px; background-color: #C1E1C1;"></div>
+    <div id="four" style="width: 14%; height:100px; background-color: #C1E1C1;"></div>
+    <div id="five" style="width: 14%; height:100px; background-color: #C1E1C1;"></div>
+    <div id="six" style="width: 14%; height:100px; background-color: #C1E1C1;"></div>
+    <div id="seven" style="width: 14%; height:100px; background-color: #C1E1C1;"></div>
+    </div>
   </section>
 
   <section>
